{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 893,
  "lineage": "7c98a14f-d31c-bf8c-c7d5-f3a54d523de8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0626faa56bc2ebb0c",
            "domain": "vpc",
            "id": "eipalloc-0d2793eafcb0cdca7",
            "instance": "i-093fa2797f5ad71a5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00824969fc9838b10",
            "private_dns": "ip-172-31-88-244.ec2.internal",
            "private_ip": "172.31.88.244",
            "public_dns": "ec2-54-211-120-45.compute-1.amazonaws.com",
            "public_ip": "54.211.120.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IP"
            },
            "tags_all": {
              "Name": "IP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.backend",
            "aws_security_group.backend_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e30b6a51b91322e6",
            "domain": "vpc",
            "id": "eipalloc-0911730216889e023",
            "instance": "i-096adf90a3502ba8e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05042948ca34f5de5",
            "private_dns": "ip-172-31-88-102.ec2.internal",
            "private_ip": "172.31.88.102",
            "public_dns": "ec2-34-237-112-21.compute-1.amazonaws.com",
            "public_ip": "34.237.112.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IP"
            },
            "tags_all": {
              "Name": "IP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.frontend",
            "aws_security_group.frontend_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:576148074895:instance/i-093fa2797f5ad71a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093fa2797f5ad71a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00824969fc9838b10",
            "private_dns": "ip-172-31-88-244.ec2.internal",
            "private_ip": "172.31.88.244",
            "public_dns": "ec2-3-84-162-245.compute-1.amazonaws.com",
            "public_ip": "3.84.162.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0515ed40e28dae305",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "backend_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0393d1cef300d9359",
            "tags": {
              "Name": "Server 2"
            },
            "tags_all": {
              "Name": "Server 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04684033172ecaa13"
            ]
          },
          "dependencies": [
            "aws_security_group.backend_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:576148074895:instance/i-096adf90a3502ba8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096adf90a3502ba8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05042948ca34f5de5",
            "private_dns": "ip-172-31-88-102.ec2.internal",
            "private_ip": "172.31.88.102",
            "public_dns": "ec2-52-3-10-12.compute-1.amazonaws.com",
            "public_ip": "52.3.10.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c026b8d420a20639",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "frontend_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0393d1cef300d9359",
            "tags": {
              "Name": "Server 1"
            },
            "tags_all": {
              "Name": "Server 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9957ca883f4e370"
            ]
          },
          "dependencies": [
            "aws_security_group.frontend_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576148074895:security-group/sg-04684033172ecaa13",
            "description": "Security rule for backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04684033172ecaa13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "backend_security_group",
            "name_prefix": "",
            "owner_id": "576148074895",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f0a6814c0d165a4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576148074895:security-group/sg-0c9957ca883f4e370",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9957ca883f4e370",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend_security_group",
            "name_prefix": "",
            "owner_id": "576148074895",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f0a6814c0d165a4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "client-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2506244812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04684033172ecaa13",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_security_group"
          ]
        }
      ]
    }
  ]
}